# fairy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fairy_config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
client/src/ufs/: mod.rs
common/: Cargo.toml
common/src/: common_lib.rs  logging.rs  metrics.rs  settings.rs
common/src/h2/: h2_service.rs  mod.rs
common/src/kv_store/: mod.rs
common/src/kv_store/local_kv_store/: local_file_kv_store.rs  mod.rs
common/src/settings/: local_kv_options.rs
conf/grafana/dashboards/: fairy_dashboard.json  fairy_service.json
conf/prometheus/: prometheus.yml
docker_debug/: Dockerfile
fuse/: Cargo.toml
fuse/src/: filesystem.rs  fuse_lib.rs
fuse/src/async_fuse/: directory_cache.rs  fusemt.rs  inode_table.rs  mod.rs  types.rs
fuse/src/fuser/: channel.rs  mod.rs  reply.rs  request.rs  session.rs
fuse/src/fuser/ll/: argument.rs  fuse_abi.rs  mod.rs  reply.rs  request.rs
fuse/src/fuser/mnt/: fuse2.rs  fuse3.rs  fuse3_sys.rs  fuse_pure.rs  mod.rs  mount_options.rs
fuse/src/passthrough/: libc_extras.rs  libc_wrappers.rs  mod.rs  passthrough.rs  passthrough_fs.rs
fuse/src/uring_fuse/: file_meta.rs  filesystem.rs  mod.rs  request.rs  session.rs
fuse/src/uring_fuse/low_level/: argument.rs  consts.rs  errno.rs  file_meta.rs  kernel_interface.rs  lock.rs  mod.rs  op.rs  operation.rs  request.rs  response.rs  version.rs
fuse/src/uring_fuse/mount/: fuse_pure.rs  mod.rs  mount_options.rs
fuse/src/uring_fuse/reply/: mod.rs  reply_attr.rs  reply_data.rs  reply_entry.rs  reply_ops.rs  reply_raw.rs
fuse/src/uring_fuse/uring_fs/: inode.rs  list_cache.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: builder.rs  runtime.rs  runtime_lib.rs
runtime/src/buf/: io_buf.rs  io_vec_buf.rs  mod.rs  raw_buf.rs  slice.rs
runtime/src/driver/: file.rs  mod.rs  op.rs  shared_fd.rs  util.rs
runtime/src/driver/op/: close.rs  mod.rs  open.rs  read.rs  write.rs
runtime/src/driver/uring/: lifecycle.rs  mod.rs
runtime/src/macros/: mod.rs  scoped_tls.rs  support.rs
runtime/src/task/: harness.rs  join.rs  mod.rs  raw.rs  state.rs  waker.rs
runtime/src/utils/: mod.rs  rand.rs  slab.rs  thread_id.rs
src/: h2_service.rs  hyper_service.rs  main.rs  metrics.rs  service_registry.rs  settings.rs
src/service_registry/: etcd.rs
worker/: Cargo.toml
worker/src/: h2_service.rs  hyper_service.rs  main.rs  metrics.rs
worker/src/service_registry/: etcd.rs
