[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
humantime = "2.1.0"

config = "0.13.1"
hostname = "0.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"

lazy_static = "1.4"
monoio = "0.1.2"
monoio-compat = "0.1.0"
prometheus = { version = "0.13.3", features = ["process"] }

rand = "0.7"

bytes = {version = "1"}
hyper = {version = "0.14", features = ["http1", "client", "server", "stream"]}

futures = "0.3"

etcd-client = "0.11"
tokio = { version = "1.28.1", features = ["full"] }
protoc = "2.28"