[workspace]
members = [
    "common",
    "worker",
    "client",
    "fuse",
]

resolver = "2"

[workspace.dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
humantime = "2.1.0"
anyhow = "1"
tokio = { version = "1.28.1", features = ["full"] }

lazy_static = "1.4"


monoio = "0.1.6"
monoio-compat = "0.1.1"

bytes = {version = "1"}

h2 = {version = "0.3"}
http = {version = "0.2"}


