[package]
name = "fairy_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fairy-client"
path = "src/main.rs"

[dependencies]
fairy-common = { path = "../common"}
fairy-fuse = { path = "../fuse" }

monoio = { workspace = true }
monoio-compat = { workspace = true }
tokio = { workspace = true }

bytes = { workspace = true }

h2 = { workspace = true }
http = { workspace = true }

clap = { version = "4.3.11", features = ["derive"]}

aws-config = { version = "0.55.3" }
aws-sdk-s3 = { version = "0.28.0"}

