[package]
name = "fairy-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "fairy_common"
crate-type = ["lib"]
path = "src/common_lib.rs"

[dependencies]
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }

tokio = { workspace = true }
monoio = { workspace = true }

lazy_static = { workspace = true }

config = "0.13.1"
hostname = "0.3"
local-ip-address = "0.5.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"

prometheus = { version = "0.13.3", features = ["process", "push"] }
