[package]
name = "fairy-fuse"
version = "0.1.0"
edition = "2021"

[lib]
name = "fairy_fuse"
crate-type = ["lib"]
path = "src/fuse_lib.rs"

[dependencies]
monoio = { workspace = true }
monoio-compat = { workspace = true }

log = { workspace= true }

libc = "0.2.147"

threadpool = "1.0"

memchr = "2"
page_size = "0.5.0"
serde = { version = "1.0.102", features = ["std", "derive"], optional = true }
smallvec = "1.6.1"
zerocopy = "0.6"

[dev-dependencies]
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo"] }
bincode = "1.3.1"
serde = { version = "1.0.102", features = ["std", "derive"] }
tempfile = "3"