[package]
name = "fairy-fuse"
version = "0.1.0"
edition = "2021"

[lib]
name = "fairy_fuse"
crate-type = ["lib"]
path = "src/fuse_lib.rs"

[dependencies]
monoio = { workspace = true }
monoio-compat = { workspace = true }

log = { workspace= true }

libc = "0.2.147"

threadpool = "1.0"

memchr = "2"
page_size = "0.5.0"
serde = { version = "1.0.171", features = ["std", "derive"]}
smallvec = "1.6.1"
zerocopy = "0.6"

bincode = "1.3.1"

[build-dependencies]
pkg-config = { version = "0.3.14", optional = true }

[features]
default = ["abi-7-30"]
libfuse = ["pkg-config"]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]

[dev-dependencies]
env_logger = "0.9"
clap = { version = "4.3.11" }
serde = { version = "1.0.102", features = ["std", "derive"] }
bincode = "1.3.1"
tempfile = "3"