[package]
name = "fairy-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
fairy-common = { path = "../common" }

log = { workspace = true }
humantime = { workspace = true }

lazy_static = { workspace = true }


monoio = { workspace = true }
monoio-compat = { workspace = true }

tokio = { workspace = true }

bytes = { workspace = true }

rand = "0.7"

hyper = {version = "0.14", features = ["http1", "client", "server", "stream"]}

h2 = { workspace = true }
http = { workspace = true }

futures = "0.3"

etcd-client = "0.11"


protoc = "2.28"

anyhow = {workspace = true}
thiserror = {workspace = true}
